--- a/style.css
+++ b/style.css
@@ -5,5 +5,29 @@ body {
 }
 
 body * {
-  outline: 1px solid red;
+  /* outline: 1px solid red; */
+}
+
+h1,
+h2,
+h3,
+h4,
+h5 {
+  margin: 5px;
+  padding: 0;
+}
+
+.skills {
+  margin-top: 25px;
+}
+.about {
+  padding: 10px;
+  width: 500px;
+}
+header {
+  display: flex;
+}
+img {
+  border-radius: 50%;
+  width: 80px;
 }
